loading & z-index fix

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -41,15 +41,18 @@ html,body{
 
 #loading{
     position: absolute;
+    left: 0px;
+    top: 0px;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 50;
+}
+#loading img{
+    position: absolute;
     left: 50%;
     top: 50%;
-    display: none;
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    z-index: 200000;
-    filter: drop-shadow(0px 0px 0px 10px black);
-    background: radial-gradient(rgba(255, 254, 2540,0.9),rgba(179, 177, 177,0.8));
-    border-radius: 50%;
+    max-width: 20vw;
+    transform: translate(-50%, -50%);
 
 }
 #map{
@@ -83,7 +86,7 @@ html,body{
     font-size: 30px;
     color: white;
     text-shadow: 0px 0px 10px rgb(82, 82, 131);
-    z-index: 200000;
+    z-index: 5;
     cursor: pointer;
     background-color: gray;
     border-radius: 8px;
@@ -123,7 +126,7 @@ html,body{
     border-radius: 0px 8px 8px 0px;
     left: 0px;
     top: 0px;
-    z-index: 9999999;
+    z-index: 100;
     
 }
 #menu_btn{
@@ -134,7 +137,6 @@ html,body{
     background: linear-gradient(to right,transparent 70%,rgba(179, 177, 177,0.99));
     transition: all;
     transform: translate(30%);
-    z-index: 5;
     position: sticky;
     border-radius: 0px 8px 8px 0px;
     cursor: pointer;
@@ -247,11 +249,15 @@ label{
 @media (max-width: 1023px) and (min-width: 0px) {
 
 
+    #loading{
+    
+        z-index: 101;
+    }
     .menu{
         min-width: 70%;
         max-width: 70%;
         min-height: 100%;
-        z-index: 1999;  
+        z-index: 100;  
     }
 
     #menu_btn{
